2011-02-10  Jie Zhang  <jie@codesourcery.com>

	PR testsuite/47622
	Revert
	2011-02-05  Jie Zhang  <jie@codesourcery.com>
	PR debug/42631
	* web.c (entry_register): Don't clobber the number of the
	first uninitialized reference in used[].

2011-02-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47664
	* ipa-inline.c (cgraph_decide_inlining_incrementally): Visit
	all edges again.

2011-02-09  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/aix61.h (PROCESSOR_DEFAULT): Change to
	PROCESSOR_POWER7.
	(PROCESSOR_DEFAULT64): Same.
	(RS6000_DEFAULT_LONG_DOUBLE_SIZE): Delete.

2011-02-09  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/mips/iris6.h (TARGET_C99_FUNCTIONS): Define.

2011-02-09  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/45505
	* tree-sra.c (struct access): New flags grp_scalar_read and
	grp_scalar_write.  Changed description of assignment read and write
	flags.
	(dump_access): Dump new flags, reorder all of them.
	(sort_and_splice_var_accesses): Set the new flag accordingly, use them
	to detect multiple scalar reads.
	(analyze_access_subtree): Use the new scalar read write flags instead
	of the old flags.  Adjusted comments.

2011-02-08  DJ Delorie  <dj@redhat.com>

	PR target/47548
	* config/m32c/m32c.c (m32c_subreg): Don't try to validate interim
	patterns.

2011-02-08  Joseph Myers  <joseph@codesourcery.com>

	* config/m68k/uclinux.opt: New.
	* config.gcc (m68k-*-uclinux*): Use m68k/uclinux.opt.

2011-02-08  Joseph Myers  <joseph@codesourcery.com>

	* config/cris/elf.opt (sim): New Driver option.

2011-02-08  Joseph Myers  <joseph@codesourcery.com>

	* config/xtensa/elf.opt: New.
	* config.gcc (xtensa*-*-elf*): Use xtensa/elf.opt.

2011-02-08  Joseph Myers  <joseph@codesourcery.com>

	* config/vax/elf.opt: New.
	* config.gcc (vax-*-linux*, vax-*-netbsdelf*): Use vax/elf.opt.

2011-02-08  Joseph Myers  <joseph@codesourcery.com>

	* config/rs6000/aix64.opt (posix, pthread): New Driver options.
